--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               enjoy a gourmet meal in the comfort of your own home.
             </p>
             <p>
-              At Gourmet Express, we believe that exceptional cuisine should be
+              At Go-Gourmet, we believe that exceptional cuisine should be
                accessible to everyone. That's why we've curated a menu of 
                exquisite dishes, crafted by our talented team of chefs using 
                only the freshest, locally-sourced ingredients.
